--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,26 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Set the project name
+Include(FetchContent)
+
+
+# Catch2 Testing framework
+# --------------------------
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.5.2
+)
+
+FetchContent_MakeAvailable(Catch2)
+
+add_executable(tests src/tests.cpp)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
+# --------------------------
+
+# Executable
+# --------------------------
 project(HelloWorld)
 
 # Add the executable
 add_executable(${PROJECT_NAME} src/main.cpp)
+# --------------------------
