--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,13 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(Catch2)
 
-add_executable(tests src/factorial/factorial.cpp src/factorial/factorial.test.cpp src/addition/addition.cpp src/addition/addition.test.cpp)
+set(MAIN_FILE "src/main.cpp")
+file(GLOB_RECURSE SRC_FILES "src/*.cpp")
+list(FILTER SRC_FILES EXCLUDE REGEX ".*\\.test\\.cpp$")
+list(FILTER SRC_FILES EXCLUDE REGEX "src/main.cpp")
+file(GLOB_RECURSE TEST_FILES "src/*.test.cpp")
+
+add_executable(tests ${SRC_FILES} ${TEST_FILES})
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 # --------------------------
 
@@ -22,5 +28,5 @@ target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 project(HelloWorld)
 
 # Add the executable
-add_executable(${PROJECT_NAME} src/factorial/factorial.cpp src/addition/addition.cpp src/main.cpp)
+add_executable(${PROJECT_NAME} ${SRC_FILES} ${MAIN_FILE})
 # --------------------------
