--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,7 @@
-# cmake_minimum_required(VERSION 3.28.2)
+cmake_minimum_required(VERSION 3.28.2)
 
 # Include(FetchContent)
 
-
-# # Catch2 Testing framework
-# # --------------------------
 # FetchContent_Declare(
 #   Catch2
 #   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
@@ -13,25 +10,14 @@
 
 # FetchContent_MakeAvailable(Catch2)
 
-# set(MAIN_FILE "src/main.cpp")
-# file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "src/*.cpp")
-# list(FILTER SRC_FILES EXCLUDE REGEX ".*\\.test\\.cpp$")
-# list(FILTER SRC_FILES EXCLUDE REGEX "src/main.cpp")
-# file(GLOB_RECURSE TEST_FILES CONFIGURE_DEPENDS "src/*.test.cpp")
+set(MAIN_FILE "src/main.cpp")
+file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "src/*.cpp")
+list(FILTER SRC_FILES EXCLUDE REGEX ".*\\.test\\.cpp$")
+list(FILTER SRC_FILES EXCLUDE REGEX "src/main.cpp")
+file(GLOB_RECURSE TEST_FILES CONFIGURE_DEPENDS "src/*.test.cpp")
 
 # add_executable(tests ${SRC_FILES} ${TEST_FILES})
 # target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
-# # --------------------------
-
-# # Executable
-# # --------------------------
-# project(HelloWorld)
-
-# # Add the executable
-# add_executable(${PROJECT_NAME} ${SRC_FILES} ${MAIN_FILE})
-# # --------------------------
-
-cmake_minimum_required(VERSION 3.28.2)
 
 set(PICO_SDK_FETCH_FROM_GIT on)
 include(pico_sdk_import.cmake)
@@ -43,11 +29,11 @@ set(CMAKE_CXX_STANDARD 17)
 
 pico_sdk_init()
 
-add_executable(${PROJECT_NAME}
-  src/main.cpp
-)
+add_executable(${PROJECT_NAME} ${SRC_FILES} ${MAIN_FILE})
 
 pico_add_extra_outputs(${PROJECT_NAME})
+
 target_link_libraries(${PROJECT_NAME}
   pico_stdlib
+  pico_cyw43_arch_none
 )
