--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,17 @@ endif()
 
 message("Building for target: ${TARGET}")
 
+project(pico-traffic-light C CXX ASM)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
+set(MAIN_FILE "src/main.cpp")
+file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "src/*.cpp")
+list(FILTER SRC_FILES EXCLUDE REGEX ".*\\.test\\.cpp$")
+list(FILTER SRC_FILES EXCLUDE REGEX "src/main.cpp")
+file(GLOB_RECURSE TEST_FILES CONFIGURE_DEPENDS "src/*.test.cpp")
+
 if ("${TARGET}" STREQUAL "tests")
   Include(FetchContent)
 
@@ -18,19 +29,6 @@ if ("${TARGET}" STREQUAL "tests")
 
   FetchContent_MakeAvailable(Catch2)
 
-  project(blink C CXX ASM)
-
-  set(CMAKE_C_STANDARD 11)
-  set(CMAKE_CXX_STANDARD 17)
-endif ()
-
-set(MAIN_FILE "src/main.cpp")
-file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS "src/*.cpp")
-list(FILTER SRC_FILES EXCLUDE REGEX ".*\\.test\\.cpp$")
-list(FILTER SRC_FILES EXCLUDE REGEX "src/main.cpp")
-file(GLOB_RECURSE TEST_FILES CONFIGURE_DEPENDS "src/*.test.cpp")
-
-if ("${TARGET}" STREQUAL "tests")
   add_executable(tests ${SRC_FILES} ${TEST_FILES})
   target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
 endif ()
